--- a/src/pages/landingPage/landingPage.css
+++ b/src/pages/landingPage/landingPage.css
@@ -127,6 +127,12 @@
 .tip-btn1:focus{
     background-color: hsl(172, 67%, 45%);
 }
+.tip-btn:hover{
+    background-color: hsl(172, 67%, 45%);
+}
+.tip-btn1:hover{
+    background-color: hsl(172, 67%, 45%);
+}
 .tip-btn1 {
     width: 113px;
     height: 50px;
